# neuron-migration-agent

./: .gitignore  ADVANCED-TUTORIAL.md  README.md  prepare_model.py  pyproject.toml
neuron_scanner/: __init__.py  cli.py  mcp_server.py
neuron_scanner/helpers/: cli_utilities.py
neuron_scanner/model_validation/: compile_script.py  display.py  sagemaker_validator.py  service.py  template_engine.py
neuron_scanner/model_validation/templates/: lifecycle_script.j2
neuron_scanner/recommendations/: __init__.py  display.py  service.py  template_engine.py  types.py
neuron_scanner/recommendations/templates/: console.j2  lifecycle_script.j2  sagemaker_validation.j2  service_messages.j2
notebooks/: sample-cross-encoder-model.ipynb
